# codex

./: AGENTS.md  COUNCIL.md  PROJECT_STATUS.md  README.md  THINTHREAD_STATUS_0.80.5.md  code_review.md  council_build.md  current_status_openai.md  generate_thinthread.py  hardening_tasks.md  help_openai.md  implementation_plan.md  research_notes.md  subapp.md
codex-rs/: Cargo.toml
codex-rs/app-server/tests/suite/: user_agent.rs
codex-rs/apply-patch/src/: invocation.rs  lib.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: council_cmd.rs  main.rs
codex-rs/cloud-tasks/src/: lib.rs
codex-rs/codex-api/src/requests/: chat.rs
codex-rs/core/src/: features.rs  lib.rs  model_provider_info.rs
codex-rs/core/src/config/: mod.rs
codex-rs/core/tests/common/: Cargo.toml  responses.rs
codex-rs/core/tests/suite/: apply_patch_cli.rs  approvals.rs  exec.rs  exec_policy.rs  unified_exec.rs
codex-rs/council/: Cargo.toml  README.md
codex-rs/council/assets/prompts/v2/: chair.txt  constitution.txt  critic.txt  implementer.txt
codex-rs/council/src/: cleanup.rs  client.rs  context.rs  lib.rs  parsing.rs  prompts.rs  run.rs  runner.rs  types.rs  verify.rs  worktree.rs
codex-rs/council/tests/: gemini_integration.rs
codex-rs/exec-server/tests/common/: lib.rs
codex-rs/exec-server/tests/suite/: accept_elicitation.rs
codex-rs/exec/src/: event_processor_with_human_output.rs
codex-rs/tui2/: Cargo.toml
codex-rs/tui2/frames/council/: frame_14.txt  frame_2.txt  frame_26.txt  frame_5.txt  (+1 more)
codex-rs/tui2/src/: app.rs  app_event.rs  chatwidget.rs  cli.rs  council_job.rs  council_progress_cell.rs  frames.rs  history_cell.rs  lib.rs  slash_command.rs  ui_consts.rs
(+11 files in other folders)
