[package]
name = "codex-council"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-api = { workspace = true }
codex-client = { workspace = true }
codex-core = { workspace = true }
codex-protocol = { workspace = true }
codex-apply-patch = { workspace = true }
codex-common = { workspace = true }
codex-git = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
ignore = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "sync"] }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
serde_json = { workspace = true }
